refactor/major: styles and layouts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,7 @@
 
 		"bestPlayersFeatureBlock": {
 			"heading": "New feature!",
-			"text": "Best players page has recentely added!",
+			"text": "Best players page has been recentely added!",
 			"button": "Check out"
 		}
 	},
